
syntax = "proto3";

package proto.radar;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Radar {
  rpc GetBasePath(ContainerPath) returns (BasePath) {}
  rpc RestartMirror(google.protobuf.Empty) returns (Error) {}
}

message ContainerPath {
  string container_id = 1;
}

message BasePath {
  string full = 1;
}

message Error {
  string msg = 1;
}
